After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695301 - [PATCH] Fix memory leaks
[PATCH] Fix memory leaks
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
3.7.x
Other Linux
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2013-03-06 15:14 UTC by Pavel Vasin
Modified: 2013-03-07 17:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix memory leaks (1.41 KB, patch)
2013-03-06 15:14 UTC, Pavel Vasin
committed Details | Review

Description Pavel Vasin 2013-03-06 15:14:00 UTC
Created attachment 238206 [details] [review]
Fix memory leaks

patch attached
Comment 1 Paolo Borelli 2013-03-07 17:44:33 UTC
Review of attachment 238206 [details] [review]:

applied! thanks
Comment 2 Paolo Borelli 2013-03-07 17:45:23 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.