Fix memory leaks

https://bugzilla.gnome.org/show_bug.cgi?id=695301